# colorcode-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/colgen/: utils.py
