[build-system]
requires = ['setuptools', 'setuptools_scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name="colgen"
dependencies = []
dynamic = ['version']

[tool.setuptools_scm]
write_to = "src/colgen/_version.py"

[tool.setuptools.dynamic]
version = {attr="colgen._version.version"}

[tool.isort]
force_single_line = true

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
